GNOME Bugzilla – Bug 629159
nautilus crashes when browsing /var/log at nautilus_icon_container_search_preedit_changed
Last modified: 2010-12-01 10:08:19 UTC
this report has been filed here: https://bugs.edge.launchpad.net/ubuntu/+source/nautilus/+bug/630886 "Nautilus crashes consistently when browsing /var/log and finding files by typing their names." "#0 0x08132373 in nautilus_icon_container_search_preedit_changed ( entry=0x90c8c38, container=0x923b680) at nautilus-icon-container.c:4922 No locals.
+ Trace 223610
I can confirm it. It's a serious bug.
Created attachment 170833 [details] [review] use imcontext in preedit signal handler A similar issue was also reported in LP 625696 [1] for nautilus version 2.31.92: the attached patch appears to solve the issue (thanks to Fumihito YOSHIDA for the patch). [1] https://bugs.edge.launchpad.net/ubuntu/maverick/+source/ibus/+bug/625696
Thanks for noticing this. I committed a similar patch to master, which should fix this bug.
*** Bug 633995 has been marked as a duplicate of this bug. ***
*** Bug 636147 has been marked as a duplicate of this bug. ***