icon-container: use the right signature for the 'preedit-changed' cb (nautilus patch) this bug is related to ibus http://git.gnome.org/browse/nautilus/commit/?h=gnome-2-32&id=af981252fad7ea623f5e0ec1814408cda8244ff2 it solves http://bugzilla.gnome.org/show_bug.cgi?id=629159 on nautilus we have this also on caja: http://forums.linuxmint.com/viewtopic.php?f=206&t=86481&start=160#p525315